plugins {
    id 'org.springframework.boot' version '3.2.10'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.txnow'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // HTTP Client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Swagger/OpenAPI 3
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Test Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}